<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.About">
    <include layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:elevation="50dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textColor="#000"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:padding="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:paddingBottom="16dp"
                        android:text="@string/about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:elevation="50dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/author"
                        android:textAlignment="center"
                        android:textColor="#000"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:padding="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">
                        <TextView
                            android:paddingBottom="16dp"
                            android:text="@string/fio"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:paddingBottom="16dp"
                            android:text="@string/afio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </TableRow>

                    <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">
                        <TextView
                            android:paddingBottom="16dp"
                            android:text="@string/email"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:paddingBottom="16dp"
                            android:text="@string/aemail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </TableRow>
                    <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">
                        <TextView
                            android:paddingBottom="16dp"
                            android:text="@string/studentIs"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:paddingBottom="16dp"
                            android:text="@string/student"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </TableRow>
                    <TextView
                        android:paddingBottom="16dp"
                        android:textStyle="bold"
                        android:text="@string/let"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>