<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/refresh"
    android:background="#f5fdef"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="#f5fdef"
            android:layout_height="match_parent"
            tools:context="android.gw.com.remotecontroller.activities.StartActivity">
            <include layout="@layout/toolbar"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight=".3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textAlignment="center"
                    android:padding="8dp"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:text="@string/menu4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/itemRecycler"/>
            </LinearLayout>
            <android.support.v7.widget.CardView
                android:layout_weight=".7"
                android:layout_margin="8dp"
                android:elevation="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_gravity="center"
                            android:gravity="center_vertical|center_horizontal"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:textSize="25dp"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/circle"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="#fff"
                            android:elevation="4dp"
                            android:id="@+id/temp"
                            android:text="22.0 C"/>
                        <TextView
                            android:text="@string/temperature"
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:padding="8dp"
                            android:layout_gravity="bottom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_gravity="center"
                            android:gravity="center_vertical|center_horizontal"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:textSize="25dp"
                            android:elevation="4dp"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/circle"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="#fff"
                            android:id="@+id/hur"
                            android:text="22.0 %"/>
                        <TextView
                            android:text="@string/hum"
                            android:padding="8dp"
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:layout_gravity="bottom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>

