<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff"
        tools:context="android.gw.com.remotecontroller.MainActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:id="@+id/content"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:elevation="16dp"
                    android:background="#FFF"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:text="@string/control"
                            android:textAlignment="center"
                            android:background="@drawable/line"
                            android:paddingTop="8dp"
                            android:textSize="20dp"
                            android:paddingBottom="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    <TableRow
                            android:background="#fff"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <ImageButton
                                android:layout_width="match_parent"
                                android:layout_margin="8dp"
                                android:layout_weight="1"
                                android:elevation="4dp"
                                android:id="@+id/one"
                                android:background="@drawable/background_off"
                                android:layout_height="100dp"
                                app:srcCompat="@drawable/holodilnik"
                                android:scaleType="centerInside"/>
                        <ImageButton
                                android:layout_width="match_parent"
                                android:layout_margin="8dp"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/tv"
                                android:elevation="4dp"
                                android:id="@+id/two"
                                android:scaleType="centerInside"
                                android:background="@drawable/background_on"
                                android:layout_height="100dp"/>
                        <ImageButton
                                android:layout_width="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="8dp"
                                android:id="@+id/three"
                                android:background="@drawable/background"
                                android:elevation="4dp"
                                app:srcCompat="@drawable/coffe"
                                android:scaleType="centerInside"
                                android:layout_height="100dp"/>
                    </TableRow>
                    <TableRow
                            android:background="#fff"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <ImageButton
                                android:layout_width="match_parent"
                                android:layout_margin="8dp"
                                android:layout_weight="1"
                                android:id="@+id/four"
                                android:elevation="4dp"
                                android:background="@drawable/background_on"
                                android:layout_height="100dp"
                                app:srcCompat="@drawable/stiralka"
                                android:scaleType="centerInside"/>
                        <ImageButton
                                android:layout_width="match_parent"
                                android:layout_margin="8dp"
                                android:layout_weight="1"
                                android:id="@+id/five"
                                app:srcCompat="@drawable/conder"
                                android:elevation="4dp"
                                android:scaleType="centerInside"
                                android:background="@drawable/background_on"
                                android:layout_height="100dp"/>
                        <ImageButton
                                android:layout_width="match_parent"
                                android:layout_weight="1"
                                android:id="@+id/six"
                                android:layout_margin="8dp"
                                android:background="@drawable/background"
                                android:elevation="4dp"
                                app:srcCompat="@drawable/vinik"
                                android:scaleType="centerInside"
                                android:layout_height="100dp"/>
                    </TableRow>
                    <TableRow
                            android:background="#fff"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <ImageButton
                                android:layout_width="match_parent"
                                android:layout_margin="8dp"
                                android:layout_weight="1"
                                android:id="@+id/seven"
                                android:elevation="4dp"
                                android:background="@drawable/background_off"
                                android:layout_height="100dp"
                                app:srcCompat="@drawable/light"
                                android:scaleType="centerInside"/>
                        <ImageButton
                                android:layout_width="match_parent"
                                android:layout_margin="8dp"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/bat"
                                android:elevation="4dp"
                                android:id="@+id/b8"
                                android:scaleType="centerInside"
                                android:background="@drawable/background_on"
                                android:layout_height="100dp"/>
                        <ImageButton
                                android:layout_width="match_parent"
                                android:layout_weight="1"
                                android:visibility="invisible"
                                android:id="@+id/b9"
                                android:layout_margin="8dp"
                                android:background="@drawable/background"
                                android:elevation="4dp"
                                app:srcCompat="@drawable/coffe"
                                android:scaleType="centerInside"
                                android:layout_height="100dp"/>
                    </TableRow>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:elevation="16dp"
                    android:background="#FFF"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:layout_width="match_parent"
                            android:text="@string/inform"
                            android:textAlignment="center"
                            android:textSize="20dp"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            android:background="@drawable/line"
                            android:layout_height="wrap_content"/>
                    <TableRow
                            android:layout_height="wrap_content"
                            android:background="#fff"
                            android:padding="8dp"
                            android:layout_width="match_parent">
                        <TextView
                                android:textSize="20dp"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:text="@string/temperature">
                        </TextView>
                        <TextView
                                android:textAlignment="textEnd"
                                android:layout_height="wrap_content"
                                android:id="@+id/tmp"
                                android:layout_width="match_parent"
                                android:textSize="28dp"
                                android:text="55'C"/>
                    </TableRow>
                    <TableRow
                            android:layout_height="wrap_content"
                            android:background="#fff"
                            android:padding="8dp"
                            android:layout_width="match_parent">
                        <TextView
                                android:textSize="20dp"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:text="@string/hum">
                        </TextView>
                        <TextView

                                android:textAlignment="textEnd"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:id="@+id/hum"
                                android:textSize="28dp"
                                android:text="40%"/>
                    </TableRow>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
